2015-12-22  SilverNexus
	* search.c: Refactor mmap()ed search to only find the line number when a match
	  is found.
	  Also, fixed a bug introduced from the refactor that caused it to always search for "alt".
	* configure.ac: Removed redundant check for strstr(). It is part of C99.
	  Add check for strdup().
	* main.c: Fixed a bug where searchResults.txt was deleted when output is routed to stdout.
	* result_list.c: Use strdup() if we have it.

2015-12-21  SilverNexus
	* search.c: Add implemetation to use mmap() if available, otherwise use stdio.
	* configure.ac: Add check for function mmap().

2015-12-20  SilverNexus
	* search.c: Refactor file opening to be inside file search functions. Reduces parameters
	  passed to the function.
	* search.h: Adjust the function declarations to match the definition.
	* settings.h: Adjust the search function pointer declaration to match the definitions.

2015-12-19  SilverNexus
	* configure.ac: Removed several checks redundant with needing a C99-compliant compiler.
	  Then added check for dirent.h for alternate implementation for systems w/o nftw(3).
	* search.c: Abstracted out the search functions.
	  Reimplemented a dirent-based directory walk.
	* search.h: Add requisite function declarations.
	* main.c: Add preprocessor directives to control which directory search function is called.
	* parseArgs.c: Change the single-match flags to adjust a function pointer instead of a flag.
	* settings.c: Implement the single- or multi-search as a functon pointer.
	* settings.h: Remove single_search flag. Implement as a function pointer.
	* TODO: Mention difference in output on tested directory as a bug.
	  Then I found the bug a few commits later and fixed it.
	* dir_list.c: Change an out of memory error to be fatal.

2015-12-18  SilverNexus
	* parseArgs.c: Added argument pasing for single-line match feature
	* settings.c: Refactored byte for stdout printing as flags byte
	* search.c: Added check for single-match mode.