@@ -2,6 +2,7 @@
 	* search.c: Refactor mmap()ed search to only find the line number when a match
 	  is found.
 	  Also, fixed a bug introduced from the refactor that caused it to always search for "alt".
+	  Patched out a potential buffer overflow in the dirent-based implementation of the folder walk.
 	* configure.ac: Removed redundant check for strstr(). It is part of C99.
 	  Add check for strdup().
 	* main.c: Fixed a bug where searchResults.txt was deleted when output is routed to stdout.
